--- a/styles/main.css
+++ b/styles/main.css
@@ -1,38 +1,31 @@
-body {
-}
+
  footer {
-     background: black;
-     color: whitesmoke;
-}
- .footer-sitemap-hdr {
-     font-weight: bold;
-     line-height: 1.618em;
-     line-height: 50px;
-}
- #footer-sitemap {
      font-family: 'PT Sans', Lucida Sans, san-serif;
+     background: black;
      color: white;
-}
- #footer-sitemap ul {
-     list-style-type: none;
-     margin: 0;
-     padding: 0;
      font-size: 14px;
-}
-
-#footer-sitemap li li a {
-     color: white;
-    background: black;
-     outline: none;
-     text-decoration: none;
-     padding: 2px 1px 0;
-}
-
-#footer-sitemap li li a:hover {
-     border-bottom: 1px solid;
-     background: lightcyan;
-     color: black ;
-     text-decoration: underline;
-
+     line-height: 1.67em;
 }
  
+ #footer-sitemap ul {
+     list-style-type: none;
+
+ }
+
+ #footer-sitemap li a, #footer-sitemap li li a {
+     color: white;
+ }
+
+
+  #footer-sitemap li a:hover, #footer-sitemap li li a:hover {
+    color: azure;
+    background: grey;
+ }
+
+
+.sitemap-header {
+    font-weight: bold;
+    display: inline-block;
+    margin-bottom: 1em;
+    margin-top: 3em;
+}
