Customize pagination component

--- a/styles/main.css
+++ b/styles/main.css
@@ -117,16 +117,11 @@
      line-height: 1.67em;
 }
 
+.page- {marin}
 
-#linear-navi{
-    margin-top:50px;
-    margin-bottomL50px;
-}
 
-.dots {
-            font-size: 1.67em;
-        margin: 20px;
-color: white;
+ {
+    padding : 50px;
 }
 
 
