--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,12 @@
      --this-page-number: 1;
  }
  
+li.nav-item.active {
+    font-weight: bolder;
+    }
+.navbar {
+    background-color: #e3f2fdl
+}
 
 .jumbotron {
   /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
