--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,11 @@
  :root {
      --this-page-number: 1;
  }
- 
+
+#navbarNav a:hover {
+    text-decoration: underline;
+}
+
 li.nav-item.active {
     font-weight: bolder;
     }
@@ -115,7 +119,7 @@ li.nav-item.active {
  
  footer {
      font-family: 'PT Sans', Lucida Sans, san-serif;
-     background: black;
+     background: #3590f3;
      color: white;
      font-size: 14px;
      line-height: 1.67em;
