--- a/styles/main.css
+++ b/styles/main.css
@@ -119,12 +119,16 @@ li.nav-item.active {
  
  footer {
      font-family: 'PT Sans', Lucida Sans, san-serif;
-     background: #3590f3;
+     background: #62bfed;
      color: white;
      font-size: 14px;
      line-height: 1.67em;
+     margin-top: 3em;
 }
-
+#contact-section>div {
+    border:1px solid black;
+    background: white;
+}
 
 
 
