--- a/styles/main.css
+++ b/styles/main.css
@@ -125,7 +125,7 @@ li.nav-item.active {
      line-height: 1.67em;
      margin-top: 3em;
 }
-#contact-section>div {
+#contact-section  div {
     border:1px solid black;
     background: white;
 }
