Enhance logo, tidy up codes for headers and footers

--- a/styles/main.css
+++ b/styles/main.css
@@ -128,7 +128,7 @@ main {
  
  footer {
      font-family: 'PT Sans', Lucida Sans, san-serif;
-     background: #62bfed;
+     background: #145fff;
      color: white;
      font-size: 14px;
      line-height: 1.67em;
