--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@
 #pageheader {
     min-height: 150px;
     background-color: cyan;
+    clear: both;
 }
 
 li.nav-item.active {
@@ -18,7 +19,7 @@ li.nav-item.active {
 
 main {
     display: block;
-    clear: both;
+    margin-top: 150px;
 
 }
 
