--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,11 @@ sss:root {
 * {
 	font-family: 'PT Sans', sans-serif;
 }
-/* Boostrap4 Component Navbar */
+h1 {
+    font-family: 'PT Serif', serif;
+}
+
+/* Boostrap4 Component Navbar */ 
 #pageheader {
     display: block;
     clear: both;
@@ -39,7 +43,7 @@ main {
 
 /* Boostrap4 Component Jumbotron /*
 
- /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+/* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
 	.jumbotron {
 		background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url("/images/herobackground1920x1080.jpg");
 		/* Set a specific height */
@@ -60,75 +64,35 @@ main {
 		transform: translate(-50%, -50%);
 		color: white;
 	}
-	.testimonial-quote {
-		font-size: 16px;
-		width: 100%;
-	}
-	.testimonial-quote blockquote {
-		/* Negate theme styles */
-		border: 0;
-		margin: 0;
-		padding: 0;
-		background: none;
-		color: gray;
-		font-family: Georgia, serif;
-		font-size: 1.5em;
-		font-style: italic;
-		line-height: 1.4 !important;
-		margin: 0;
-		position: relative;
-		text-shadow: 0 1px white;
-		z-index: 600;
-	}
-	.testimonial-quote blockquote * {
-		box-sizing: border-box;
-	}
-	.testimonial-quote blockquote p {
-		color: #75808a;
-		line-height: 1.4 !important;
-	}
-	.testimonial-quote blockquote p:first-child:before {
-		content: '\201C';
-		color: #81bedb;
-		font-size: 7.5em;
-		font-weight: 700;
-		opacity: .3;
-		position: absolute;
-		top: -.4em;
-		left: -.2em;
-		text-shadow: none;
-		z-index: -300;
-	}
-	.testimonial-quote img {
-		border: 3px solid #9CC1D3;
-		border-radius: 50%;
-		display: block;
-		width: 120px;
-		height: 120px;
-		position: absolute;
-		top: -.2em;
-		left: 0;
-	}
-	.testimonial-quote cite {
-		color: gray;
-		display: block;
-		font-size: .8em;
-	}
-	.testimonial-quote cite span {
-		color: #5e5e5e;
-		font-size: 1em;
-		font-style: normal;
-		font-weight: 700;
-		letter-spacing: 1px;
-		text-transform: uppercase;
-		text-shadow: 0 1px white;
-	}
-	.testimonial-quote {
-		position: relative;
-	}
-	.testimonial-quote .quote-container {
-		padding-left: 160px;
-	}
+	
+/* Style for testimonial section of the home page */
+
+    #testimonials .card-text {
+        font-family: "PT Serif", Serif;
+        font-style: italic;
+        text-align: center;
+    }
+    #testimonials .card-text {
+        quotes: "“" "”" "‘" "’"";
+
+    }
+    #testimonials .card-text:before {
+        content: open-quote;
+    }
+    #testimonials .card-text:after {
+        content: close-quote;
+    }
+    #testimonials .card-text:before, .card-body+.testimonials:after {
+        color: purple;
+    }
+    #testimonials .cite {
+        font-family: "PT Sans", sans-serif;
+        font-style: normal;
+        text-align: right;
+        color: gray;
+        display: block;
+    }
+
 	#footer {
 		font-family: 'PT Sans', san-serif;
 		background-color: #8AAFFF;
