--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=PT+Sans|PT+Serif&display=swap');
 
 
-{
+* {
 	font-family: 'PT Sans', sans-serif;
 }
+
+body>div {1px solid black;}
 
 h1 {
     font-family: 'PT Serif', serif;
@@ -46,7 +48,7 @@ h1 {
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		color: white;
+		
 	}
 	
 /* Style for testimonial section of the home page */
