--- a/styles/main.css
+++ b/styles/main.css
@@ -32,8 +32,19 @@ h2 {
     background-color: blue;
 }
 
-.navbar {padding:0px; border:0px; max-height: 200px }
+.navbar {max-height: 200px }
 
+#navbarNav a:linked, visited {
+    text-decoration: none; font-weight: normal;
+}
+
+#navbarNav a:hover {
+    text-decoration: underline; font-weight: bold;
+}
+
+#navbarNav a:active {
+    text-decoration: none; font-weight: bold;
+}
 
 
 
