--- a/styles/main.css
+++ b/styles/main.css
@@ -7,14 +7,15 @@
 
 body>div {1px solid black;}
 
-/* h1 {
+h1 {
     font-family: 'PT Serif', serif;
     font-size: 1.6rem;
     color: red;
     line-height: 1.67rem;
     margin-top: 2rem;
+    margin-bottom: 1rem;
     text-shadow: 1px 1px gray;
-} */
+}
 
 
 
@@ -165,9 +166,14 @@ body>div {1px solid black;}
         padding-bottom: 1em;
 	}
 
-    #pagefootmiddle.row {
+    #pagefootermiddle.row {
         margin-bottom: 2em;
     }
+
+    #pagefooter.page-item.disabled{
+        color: silver;
+    }
+
 
     .contactitem {
 
@@ -183,6 +189,16 @@ body>div {1px solid black;}
         line-height: 2rem;
         text-align: center;
         margin-right: 2px;
+    }
+
+    .contactitem>a {
+        color: white;
+        text-decoration: none;
+    }
+
+    .contactitem>a:hover {
+        color: white;
+        text-decoration: underline;
     }
 
     my-email::after {
