--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@ h1 {
     background-color: blue;
 }
 
-.navbar {max-height: 200px }
+.navbar {max-height: 200px;  border-radius: 0px; }
 
 .navbarlink a:linked, visited {
     text-decoration: none; font-weight: normal;
@@ -45,6 +45,7 @@ h1 {
   max-height: 500px;
   margin: 0px;
   padding: 0px;
+  border-radius: 0px;
 }
 
 .hero-image {
