--- a/styles/main.css
+++ b/styles/main.css
@@ -186,7 +186,18 @@ body {
 
 
 
+#portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between
+}
 
+#portfolio > div > div > div > img {
+    width: 600px;
+    height: auto;
+
+
+}
 
 
 
